cloned points engine to create a range engine

--- a/app/css/right-controller.css
+++ b/app/css/right-controller.css
@@ -99,4 +99,17 @@
     background-color: rgba(25, 25, 25, 1.0);
     cursor: pointer;
 }
+.hidden
+{
+    display: none;
+}
 
+.inline
+{
+    display: inline;
+}
+
+.block
+{
+    display: block;
+}
