--- a/app/css/right-controller.css
+++ b/app/css/right-controller.css
@@ -5,7 +5,7 @@
     font-weight:700;
     color: #141414;
 }
-#right-controller #menu{
+#right-controller .layer-menu{
     float: right;
     width: 70%;
 }
