--- a/homepage/stylesheets/tech.css
+++ b/homepage/stylesheets/tech.css
@@ -4,6 +4,21 @@ div#header { padding-top: 15px; padding-bottom: 15px; width: 100%; height: 70px;
 div#header #title{ padding-left: 30px; font-variant: small-caps; float: left}
 div#header #subtitle{ padding-left: 160px; font-variant: small-caps; font-size: 0.4em; }
 
+div#menu {
+    position: relative;
+    float: left;
+    width: 80%;
+    margin-left: 10%;
+    margin-bottom: 10px;
+    font-size: 0.8em;
+}
+div#menu .link{
+    float: left;
+    margin-left: 7%;
+}
+div#menu .link a{
+    color: #ddd;
+}
 div#container {
     position: relative;
     float: left;
