--- a/homepage/stylesheets/style.css
+++ b/homepage/stylesheets/style.css
@@ -17,15 +17,21 @@ div#content_middle { float: left; width: 95%; text-align: center; margin-left: a
 div#main_links { width: 690px ; margin-left: auto ; margin-right: auto ; }
 div#button_link { border: none; }
 
-div#block_title { margin-right: 10px; float: left; 
+
+div#text_blocks #block{
+    width: 370px;
+    padding: 10px;
+    float: left;
+}
+div#text_blocks #block_title { margin-right: 10px; float: left; 
                   text-align: left; color: #111; 
-                  font-size: 46px; line-height: 48px;
+                  font-size: 28px; line-height: 30px;
                   font-weight: bold;  }
 
-div#text_blocks { width: 780px; margin-left: auto; margin-right: auto; 
+div#text_blocks { width: 780px; margin-left: auto; margin-right: auto; }
+div#text_blocks p { float: left;
                     text-align: justify; 
                     font-size: 22px; line-height: 24px;}
-
 div.gfc-resultsHeader{ border: none; }
 
 dif#footer {width: 90%; margin-top: 20px;}
