--- a/homepage/stylesheets/style.css
+++ b/homepage/stylesheets/style.css
@@ -22,6 +22,7 @@ div#text_blocks #block{
     width: 370px;
     padding: 10px;
     float: left;
+    font-size: 0.85em;
 }
 div#text_blocks #block_title { margin-right: 10px; float: left; 
                   text-align: left; color: #111; 
