--- a/app/css/mol.css
+++ b/app/css/mol.css
@@ -1,93 +1,2 @@
-.mol-WidgetContainer {
-    margin-top: -11px;
-	width: 290px;
-    float: right;
-}
+body {font-family: Arial, sans-serif; color: #141414; font-weight:700; }
 
-.mol-RightController {
-    margin-right: 5px;
-	width: 290px;
-    font-family: Arial, sans-serif;
-    font-weight:700;
-    color: #141414;
-}
-
-.mol-RightController .mol-LayerControl-Menu {
-    list-style-type: none;
-    background-image: -webkit-gradient(
-        linear,
-        left bottom,
-        left top,
-        color-stop(0.37, rgba(184, 233, 133,0.65)),
-        color-stop(0.69, rgba(92,194,7,0.65))
-    );
-    background-image: -moz-linear-gradient(
-        center bottom,
-        rgba(184, 253, 133,0.65) 37%,
-        rgba(92,214,7,0.65) 69%
-    );
-    -webkit-box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px; 
-    -moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.347656);
-    box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px; 
-}
-
-.mol-LayerControl-Display {
-    float: right;
-    width: 70%;
-}
-
-.mol-RightController .mol-LayerControl-MenuOption {
-    font-size: 12px;
-    float: right;
-    margin: 0px;
-    padding-top: 0px;
-    padding-right: 6px;
-    padding-left: 6px;
-    padding-bottom: 0px;
-    line-height: 170%;
-    text-align: center;
-    -moz-border-radius-topleft: 3px;
-    border-top-left-radius: 3px;
-    -moz-border-radius-bottomleft: 3px;
-    border-bottom-left-radius: 3px;
-    border: 1px solid rgb(135, 165, 149);
-    border-right: none;
-}
-
-.mol-RightController .mol-LayerControl-MenuOptionLink {
-    cursor: pointer;
-    text-decoration:none;
-    color: #141414;
-}
-
-.mol-RightController .mol-LayerControl-MenuOptionLabel {
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    background-image: -webkit-gradient(
-        linear,
-        left bottom,
-        left top,
-        color-stop(0.37, rgba(35, 35, 35,0.75)),
-        color-stop(0.69, rgba(66,66,66,0.75))
-    );
-    background-image: -moz-linear-gradient(
-        center bottom,
-        rgba(35, 35, 35,0.75) 37%,
-        rgba(66,66,66,0.75) 69%
-    );
-    border: 1px solid rgb(73, 73, 73);
-    color: rgb(240, 240, 260);
-    width: 40px;
-}
-
-.hidden {
-    display: none;
-}
-
-.inline {
-    display: inline;
-}
-
-.block {
-    display: block;
-}
