--- a/homepage/stylesheets/style.css
+++ b/homepage/stylesheets/style.css
@@ -223,8 +223,8 @@ div#content .wrapper #code{
 div#content .wrapper #code a{ 
     color: #b8fd85;
 }
-dif#footer {float: left; width: 100%; margin-bottom: 30px; height: 40px;}
-div#footer_links { float: right; text-align: left; padding-right: 20px; padding-right: 20px; height: auto; color: #fff; }
+dif#footer {float: left; width: 800px; left: 50%; margin-left: -400px; margin-bottom: 30px; height: 40px;}
+div#footer_links { float: right; width: 50%; text-align: left; padding-right: 20px; padding-right: 20px; height: auto; color: #fff; }
 div#footer_links a { font-size: 12px; color: #aaa; padding-right: 8px; padding-left: 8px; line-height: 150%; text-decoration: underline;}
  
  
