--- a/homepage/stylesheets/style.css
+++ b/homepage/stylesheets/style.css
@@ -13,7 +13,7 @@ div#header {
     margin-left: -430px;
     padding-top: 10px; 
     padding-bottom: 8px; 
-    height: 40px; 
+    height: 50px; 
 }
 div#header #title{ 
     font-family: 'Ubuntu', san-sarif;
@@ -48,7 +48,7 @@ div#header #menu .item a{
     color: #394050;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    font-size: 0.8em;
+    font-size: 0.9em;
     font-weight: bold;
     -moz-box-shadow: 0px px 10px rgba(183,233,163,0.6);
     -webkit-box-shadow: 0px 0px 10px rgba(183,233,163,0.6);
@@ -73,7 +73,7 @@ div#container {
     font-family: 'Ubuntu', san-sarif;
     float: left; width: 100%; height: 80%;
     min-height: 300px;
-    margin-top: 60px;
+    margin-top: 70px;
     position: relative;
 }
 
@@ -81,7 +81,7 @@ div#container {
 div#container #top {
     width: 100%;
     float: left;
-    height: 150px;
+    height: 180px;
     margin-bottom: 10px;
     background-color: #b8fd85; color: #111; 
 }
@@ -89,18 +89,18 @@ div#container #top {
 div#container #top .topQuote{
     position: absolute;
     left: 50%;
-    margin-left: -300px;
-    width: 480px;
+    margin-left: -320px;
+    width: 520px;
     height: 125px;
     margin-top: 15px;
-    font-size: 1.3em;
+    font-size: 1.6em;
     text-align: justify;
     color: #3a0082;
 }
 div#container #top .topQuote .aboutLink{
     float: right;
-    margin-right: 120px;
-    margin-top: 10px;
+    margin-right: 20px;
+    margin-top: 5px;
 }
 div#container #top .topQuote .aboutLink a{
     color: #3a0082;
@@ -110,15 +110,15 @@ div#container #top .topBackground img {
     position: absolute;
     right: 0;
     top: 0;
-    height: 150px;
+    height: 180px;
 }
 div#middle { 
     position: relative;
     float:left;
-    width: 680px;
+    width: 720px;
     left: 50%;
-    margin-left: -380px;
-    padding: 10px 0px 8px 30px;
+    margin-left: -400px;
+    padding: 25px 0px 35px 30px;
     height: 120px; 
     color: #ddd;
 }
@@ -153,7 +153,7 @@ div#middle .horizontalDivider{
     margin: 5px 20px 10px 20px;
 }
 div#middle .middleQuote{
-    font-size: 1.2em;
+    font-size: 1.4em;
     height: 90px;
     margin-top: 5px;
 }
@@ -173,7 +173,7 @@ div#content .wrapper{
 div#content .wrapper .details{ 
     width: 100%;
     color: #fff;
-    height: 110px;
+    height: 140px;
 }
 div#content .wrapper .details .pretitle{ 
     font-style: italic;
@@ -181,11 +181,11 @@ div#content .wrapper .details .pretitle{
 }
 div#content .wrapper .details .title{ 
     font-weight: 500;
-    font-size: 1.9em;
+    font-size: 2.0em;
 }
 div#content .wrapper .details .description{ 
     font-weight: 200;
-    font-size: 1.0em;
+    font-size: 1.2em;
     padding: 5px 0 5px 0;
 }
 div#content .wrapper #left{ 
@@ -225,7 +225,7 @@ div#content .wrapper #code a{
 }
 dif#footer {float: left; width: 800px; left: 50%; margin-left: -400px; margin-bottom: 30px; height: 40px;}
 div#footer_links { float: right; width: 50%; text-align: left; padding-right: 20px; padding-right: 20px; height: auto; color: #fff; }
-div#footer_links a { font-size: 12px; color: #aaa; padding-right: 8px; padding-left: 8px; line-height: 150%; text-decoration: underline;}
+div#footer_links a { font-size: 1.1em; color: #aaa; padding-right: 8px; padding-left: 8px; line-height: 150%; text-decoration: underline;}
  
  
 
