--- a/homepage/stylesheets/style.css
+++ b/homepage/stylesheets/style.css
@@ -143,7 +143,7 @@ div#middle img.smallest{
     height: 30px;
     margin-top: 60px;
 }
-div#middle img.turtle{ 
+div#middle #turtle img{ 
     height: 30px;
     margin-top: 60px;
 }
