--- a/app/css/widgets.css
+++ b/app/css/widgets.css
@@ -164,6 +164,7 @@ button:hover{
     margin-right: 5px;
     float: left;
     position: relative;
+    width: 92%;
     -moz-border-radius: 4px;
     border-radius: 4px;
 }
@@ -172,42 +173,54 @@ button:hover{
     line-height: 25px;
     font-size: 1.1em;
 }
-.mol-LayerControl-Search .source{
-    float: left;
-    padding-top: 3px;
-    font-weight: 600;
-    color: rgba(25, 25, 25, 0.85);
-    background-color: rgba(25, 25, 25, 0.01);
-    -moz-box-shadow: 2px 2px 5px #000;
-    -webkit-box-shadow: 2px 2px 5px #000;
-    box-shadow: 2px 2px 5px #222;
-    border: none;
-}
-
 .mol-LayerControl-Search .value{
     float: left;
     margin-right: 2px;
+    width: 74%;
 }
 .mol-LayerControl-Search .execute{
     float: left;
     margin-right: 5px;
+    width: 50px;
 }
 .mol-LayerControl-Results{
     float: left;
-    width: 84%;
-    margin-left: 19px;
+    width: 100%;
     list-style-type: none;
     text-align: left;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
     outline: none;
     position: relative;
+    padding: 0px;
+    margin: 0px;
+}
+.mol-LayerControl-Results .filters{
+    float: left;
+    width: 30%;
+    height: 100%;
+    margin-right: 5px;
+    padding: 0px;
+    border: 0px;
+}
+.mol-LayerControl-Results .filters .filter{
+    padding: 4px;
+    margin: 0px 0px 5px 0px;
+}
+.mol-LayerControl-Results .filters .filter .filterName{
+    margin-bottom: 5px;
+    font-size: 1.1em;
+}
+.mol-LayerControl-Results .filters .filter .option a{
+    color: #6622ee;
+    text-decoration: none;
+    margin-left: 10px;
+    margin-bottom: 2px;
+    font-weight: normal;
 }
 .mol-LayerControl-Results ol{
     list-style-type: none;
     padding: 5px;
     margin: 0px;
-    width: 100%;
+    width: 65%;
     float: left;
     padding-top: 10px;
     position: relative;
@@ -215,22 +228,35 @@ button:hover{
     border-radius: 3px;
 }
 .mol-LayerControl-Results ul {
+    padding-left: 0px;
     margin-bottom: 5px;
     text-align: left;
     width: 100%;
     float: left;
     position: relative;
 }
+.mol-LayerControl-Results .result button{
+    width: 20px;
+    height: 20px;
+    color: #fff;
+    padding: 0px;
+    padding-top: 2px;
+}
+.mol-LayerControl-Results .result button img{
+    width: 16px;
+    height: 16px;
+}
 .mol-LayerControl-Results .result div.resultName{
-    width: 58%;
+    width: 50%;
     float: left;
+    margin-left: 4px;
 }
 .mol-LayerControl-Results .result .resultAuthor{
     font-size: 0.8em;
     margin-top: -4px;
 }
 .mol-LayerControl-Results .result div.resultLink{
-    width: 25%;
+    width: 20%;
     font-size: 0.9em;
     padding-top: 1%;
     float: left;
@@ -271,13 +297,15 @@ button:hover{
 	content:url('/static/checked.png');
 }
 .mol-LayerControl-Results .navigation{
-    width: 100%;
+    width: 50%;
     float: right;
     padding: 0px;
     margin: 0px;
     margin-top: 5px;
+    margin-right: 10px;
 }
 .mol-LayerControl-Results .navigation button{
     float: right;
     margin-left: 8px;
+    font-size: 0.9em;
 }
