--- a/app/css/mol.css
+++ b/app/css/mol.css
@@ -1,8 +1,6 @@
 body {font-family: Arial, sans-serif; color: #141414; font-weight:700; }
 /* Set up RightControl defaults */
-.mol-Map-RightControl { margin-right: 5px; width: 290px; 
-    -webkit-user-select: none;
-    cursor:not-allowed; /*makes it even more obvious*/}
+.mol-Map-RightControl { margin-right: 5px; width: 290px; }
 .mol-Map-RightControl .TOP { position: relative; float: left; width: 100%; height: auto; margin-bottom: 5px; }
 .mol-Map-RightControl .MIDDLE { position: relative; float: left; width: 100%; height: auto; margin-bottom: 5px; }
 .mol-Map-RightControl .BOTTOM { position: relative; float: left; width: 100%; height: auto; margin-bottom: 5px; }
@@ -27,8 +25,6 @@ body {font-family: Arial, sans-serif; color: #141414; font-weight:700; }
     font-weight:700;
     color: #141414;
     font-size: 14px;
-    -webkit-user-select: none;
-    cursor:not-allowed; /*makes it even more obvious*/
 }
 .mol-Map-TopLeftControl .TOP { position: relative; float: left; width: 100%; height: auto; margin-bottom: 5px; }
 .mol-Map-TopLeftControl .MIDDLE { position: relative; float: left; width: 100%; height: auto; margin-bottom: 5px; }
